tests/algorithms/transpiler/Swift/physics/basic_orbital_capture.error
signal: illegal instruction
main/main.swift:139: Fatal error: capture_area failed

*** Signal 4: Backtracing from 0x7f22835ef288... done ***

*** Program crashed: Illegal instruction at 0x00007f22835ef288 ***

Thread 0 "main" crashed:

0      0x00007f22835ef288 _assertionFailure(_:_:file:line:flags:) + 264 in libswiftCore.so
1 [ra] 0x000055d52f5860ed run_tests #1 () in  + 1324 in main
2 [ra] 0x000055d52f583e0a main #1 () in  + 89 in main
3 [ra] 0x000055d52f585241 main + 176 in main
4 [ra] 0x00007f2281e041ca <unknown> in libc.so.6
5 [ra] 0x00007f2281e0428b <unknown> in libc.so.6


Registers:

rax 0x0000000000000000  0
rdx 0x0000000000000002  2
rcx 0x0000000000000007  7
rbx 0x000055d01903a43e  94352261227582
rsi 0x800055d52f586970  9223466410965494128
rdi 0x000055d54457e1a0  2f 62 69 6e 00 00 00 00 31 00 00 00 00 00 00 00  /bin····1·······
rbp 0x00007ffcab39eb00  80 ed 39 ab fc 7f 00 00 ed 60 58 2f d5 55 00 00  ·í9«ü···í`X/ÕU··
rsp 0x00007ffcab39ea90  00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  ················
 r8 0x000055d544549010  07 00 07 00 05 00 07 00 07 00 07 00 02 00 02 00  ················
 r9 0x0000000000000007  7
r10 0x000055d54457e1b0  3e a4 03 19 d0 55 00 00 f7 e2 d6 a4 f1 2a eb 9f  >¤··ÐU··÷âÖ¤ñ*ë·
r11 0x9feb2af1a4d6e2f7  11523351288898577143
r12 0x0000000000000001  1
r13 0x00007f2282ed7068  00 00 00 00 00 00 00 00 50 08 ee 82 22 7f 00 00  ········P·î·"···
r14 0x000055d52f588c18  03 00 00 00 00 00 00 00 e8 8f 58 2f d5 55 00 00  ········è·X/ÕU··
r15 0x00007f2283a61000  e0 22 a6 83 22 7f 00 00 34 00 00 00 00 00 00 00  à"¦·"···4·······
rip 0x00007f22835ef288  0f 0b 48 8d 35 4f 5c fb ff 48 8d 55 a0 45 31 e4  ··H·5O\ûÿH·U E1ä

rflags 0x0000000000010206  PF

cs 0x0033  fs 0x0000  gs 0x0000


Images (48 omitted):

0x000055d52f580000–0x000055d52f587038 aa708d486eca0c8465b80aec081378b6ced0c264 main            /tmp/TestSwiftTranspiler_Algorithms_Golden763_physics_basic_orbital_capture4187974056/001/main
0x00007f2281dda000–0x00007f2281f89cb9 282c2c16e7b6600b0b22ea0c99010d2795752b5f libc.so.6       /usr/lib/x86_64-linux-gnu/libc.so.6
0x00007f2283313000–0x00007f22838a22d8 7bd479aa5e6f57e6772da70789dcdfa25d5e29b0 libswiftCore.so /root/.local/share/mise/installs/swift/6.1/usr/lib/swift/linux/libswiftCore.so

Backtrace took 0.06s

